[project]
name = "medha-algo-workspace"
version = "0.1.0"
description = "Workspace: Medha Options Dashboard (Dhan Data API only)"
requires-python = ">=3.12"
dependencies = [
    "medha-options-dashboard",
]

[tool.uv.sources]
medha-options-dashboard = { workspace = true }

[tool.uv.workspace]
members = ["options-dashboard"]
